Skills section completed
+ added back link to html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 	<div class="container">
 		<h1>Learning Highlights</h1>
+		<a href="https://github.com/Syknapse/My-Learning-Tracker">BACK</a>
 		<div>
 			<h2>Tutorials</h2>
 			<p>YouTube playlist with the latest tutorials I have watched/done</p>
