[To do app] create toggle to do action

--- a/Notebooks/Redux intro - Dan Abramov/3-to do app/index.html
+++ b/Notebooks/Redux intro - Dan Abramov/3-to do app/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Redux simple store</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Redux To Do App</title>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.4/redux.js'></script>
 </head>
 <body>
